--- a/src/scss/_component.scss
+++ b/src/scss/_component.scss
@@ -139,6 +139,7 @@
         background-color: $bg;
         transition: 0.2s ease-in;
         z-index: 1;
+        display: block;
     }
     span,a{
         transition: 0.2s ease-in;
@@ -154,10 +155,9 @@
             right: 0;
         }
     }
-    
 }
 
-@mixin outline {
+@mixin button {
     font-size: 1rem;
     font-weight: bolder;
     padding: 0.5rem 1.5rem;
