--- a/src/scss/page/_about.scss
+++ b/src/scss/page/_about.scss
@@ -1,6 +1,5 @@
 .about{
     &#{-sec1}{
-        padding-top: 7.5rem;
         height: 50rem;
         @include media-max($xl) {
             height: 40rem;
@@ -72,7 +71,7 @@
                         justify-content: center;
                         &#{-heading}{
                             h3{
-                                @include display-4;
+                                @include display-3;
                                 color: #fefefe;
                                 margin-top: 3rem;
                                 margin-bottom: 0.5rem;
@@ -218,7 +217,7 @@
 
                 h2{
                     color: #000;
-                    @include display-4;
+                    @include display-3;
                     margin-bottom: 1.5rem;
                 }
                 p{
@@ -263,7 +262,7 @@
 
                 h2{
                     color: #fcfcfb;
-                    @include display-4;
+                    @include display-3;
                     margin-bottom: 1.5rem;
                 }
                 p{
@@ -304,7 +303,74 @@
         }
     }
     //******************************************************************************************************
-    //&#{-sec6}{}
+    &#{-sec6}{
+        background-size: cover;
+        background-position: center;
+        &#{-container}{
+            @include container;
+            @include py(4rem);
+
+            &#{-display}{
+                padding-bottom: 5rem;
+                margin: 0 auto;
+                width: 100%;
+                text-align: center;
+
+                h2{
+                    color: #000;
+                    @include display-3;
+                    margin-bottom: 1.5rem;
+                }
+                p{
+                    color: #000;
+                    font-size: 0.9375rem;
+                    max-width: 992px;
+                    margin: 1rem auto;
+                    width: 100%;
+                }
+            }
+            &#{-row}{
+                @include row;
+                &#{-col}{
+                    text-align: center;
+                    @include col(33.333%);
+                    figure{
+                        @include py(0.75rem);
+                        width: 100%;
+                        img{
+                            width: 100%;
+                        }
+                        figcaption{
+                            font-size: 1.25rem;
+                            color: #000;
+                            @include py(0.75rem);
+                        }
+                    }
+                }
+            }
+        }
+    }
     //******************************************************************************************************
-    // &#{-sec7}{}
+    &#{-sec7}{
+        &#{-container}{
+            max-width: 100rem;
+            margin: auto;
+            width: 100%;
+            
+            &#{-display}{
+                padding-bottom: 1.5rem;
+                margin: 0 auto;
+                width: 100%;
+                text-align: center;
+
+                h2{
+                    color: #000;
+                    @include display-3;
+                    margin-bottom: 1.5rem;
+                }
+            }
+        }
+    }
 }
+//******************************************************************************************************
+//slick
