--- a/src/scss/page/_applications.scss
+++ b/src/scss/page/_applications.scss
@@ -1,8 +1,5 @@
 #banner-applications{
-    padding-top: 4.125rem;
     margin-bottom: 0;
-    
-                
     .silck-item{
         position: relative;
         height: 45.5rem;
@@ -156,19 +153,38 @@
 
     .slick-dots{
         bottom: 0;
-        li>button:before{
-            content: '';
-            width: 0.5rem;
-            height: 0.5rem;
-            border-radius: 50%;
-            border:solid 0.125rem #fff;
-            opacity: 1;
-        }
+        li{
+            width: 0.75rem;
+            height: 1.5rem;
+            position: relative;
 
-        li.slick-active>button:before{
-            background-color: #fff;
+            button{
+                width: 0.75rem;
+                height: 1.5rem;
+            }
+            
+            >button:before{
+                content: '';
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%,-50%);
+                width: 0.25rem;
+                height: 0.25rem;
+                border-radius: 50%;
+                background-color: #fff;
+                opacity: 1;
+            }
+            &:hover{
+                button::before{
+                    background-color: #5d5854;
+                }
+            }
+            &.slick-active>button::before{
+                background-color: #5d5854;
+            }
+    
         }
-
     }
 }
 //********************************************************************************************
@@ -272,6 +288,7 @@
                         font-size: #e5e3e9;
                         margin-top: -0.5rem;
                         z-index: 3;
+                        
                         @include py(1.5rem);
                         span{
                             display: inline-block;
@@ -289,7 +306,8 @@
                 p{
                     font-size: 1rem;
                     color: #000;
-                    margin-bottom: 5rem;
+                    margin: 0 auto 5rem auto;
+                    max-width: 50rem;
                 }
             }
             &#{-row}{
@@ -347,15 +365,23 @@
 
 
 //********************************************************************************************
+
+$applications-silck-navbar-height: 3rem;
+
+
+#applications nav{
+    @include px(2.875rem);
+}
+
 #navbar-applications{
     @include media-max($md) {
         display: none;
     }
     .silck-item{
         background-color: #c2bfcb;
-        height: 4.75rem;
+        height: $applications-silck-navbar-height;
             h3{
-                height: 4.75rem;
+                height: $applications-silck-navbar-height;
                 display: flex;
                 align-items: center;
                 text-align: center;
@@ -363,11 +389,9 @@
                 a{
                     display: block;
                     color: #e5e3ea;
-                    font-size: 1.125rem;
+                    font-size: 1rem;
                     font-weight: bolder;
                     width: 100%;
-                    border-right: solid 1px #e5e3ea; 
-                    border-left: solid 1px #e5e3ea;
                     &:focus{
                         outline: 0;
                     }
@@ -406,14 +430,14 @@
     .slick-arrow{
         background-color: #c2bfcb;
         width: 2.875rem;
-        height: 4.75rem;
+        height: $applications-silck-navbar-height;
         &::after{
             content: '';
             position: absolute;
             background-color: #e5e3ea;
             top: 50%;
-            width: 1.5rem;
-            height: 0.125rem;
+            width: 1rem;
+            height: 0.0625rem;
             opacity: 1;
         }
         &::before{
@@ -421,8 +445,8 @@
             position: absolute;
             background-color: #e5e3ea;
             bottom: 50%;
-            width: 1.5rem;
-            height: 0.125rem;
+            width: 1rem;
+            height: 0.0625rem;
             opacity: 1;
         }
     }
@@ -432,11 +456,11 @@
         left: -2.875rem;
         transform: translate(0,0);
         &::after{
-            transform: translate(0.5rem,0.45rem) rotate(45deg);
+            transform: translate(0.5rem,0.35rem) rotate(50deg);
             right: 50%;
         }
         &::before{
-            transform: translate(0.5rem,-0.45rem) rotate(-45deg);
+            transform: translate(0.5rem,-0.35rem) rotate(-50deg);
             right: 50%;
         }
         
@@ -447,11 +471,11 @@
         right: -2.875rem;
         transform: translate(0,0);
         &::after{
-            transform: translate(-0.5rem,-0.55rem) rotate(45deg);
+            transform: translate(-0.5rem,-0.4rem) rotate(50deg);
             left: 50%;
         }
         &::before{
-            transform: translate(-0.5rem,0.55rem) rotate(-45deg);
+            transform: translate(-0.5rem,0.4rem) rotate(-50deg);
             left: 50%;
         }
     }
