--- a/src/scss/page/_header.scss
+++ b/src/scss/page/_header.scss
@@ -20,7 +20,9 @@ header{
     left: 0;
     right: 0;
     z-index: 1010;
-
+}
+main{
+    padding-top: 3rem;
 }
 .header {
     &#{-container} {
@@ -38,21 +40,18 @@ header{
     &#{_navbar} {
         &#{-logo} {
             >a{
+                display: block;
+                padding: 0.5rem $grid-gutters/2;
                  >img {
-                     width: 120px;
-                     padding: 0.5rem 0 0.5rem 0.5rem;
-                     @include media-min($xl) {
-                        padding: 0.75rem $grid-gutters/2;
-                    }
+                     width: 100px;
                  }
             }
-           
         }
 
         &#{-btn} {
             position: absolute;
             top: 0.5rem;
-            right: 0.75rem;
+            right: 1rem;
             margin-left: auto;
             border: 0.0625rem transparent solid;
             background-color: transparent;
@@ -122,7 +121,6 @@ header{
             align-items: center;
             background-color: rgba(3,3,3,0.9);
             transition: all 0.4s;
-            
             @include media-min($xl) {
                 @include mx(auto)
             }
@@ -131,7 +129,8 @@ header{
                 align-items: start;
                 width: 100%;
                 position: absolute;
-                top: 72px;
+                @include py(0.5rem);
+                top: 3rem;
                 left: 0;
                 right: 0;
                 opacity: 0;
@@ -151,10 +150,9 @@ header{
                 &#{-link} {
                     @include py(1rem);
                     @include media-max($xl) {
-                        @include py(0.75rem);
+                        @include py(0.5rem);
                     }
                     display: block;
-                    height: 100%;
                     color: #fdfafa;
                     position: relative;
                     font-weight: bolder;
@@ -247,7 +245,7 @@ header{
                 display: block;
                 padding: 0.35rem 1.5rem;
                 @include media-max($xl) {
-                    @include py(0.5rem);
+                    @include py(0.375rem);
                 }
                 color: #fdfafa;
                 font-size: 0.875rem;
