--- a/src/scss/page/_home.scss
+++ b/src/scss/page/_home.scss
@@ -1,6 +1,5 @@
 .home{
     &#{-sec1}{
-        padding-top: 7.5rem;
         height: 100vh;
         position: relative;
         background-color: #000;
@@ -9,7 +8,7 @@
         }
         &#{-bgUpper}{
             position: absolute;
-            top:0;
+            top: 0;
             left: 0;
             right: 0;
             bottom: 0;
@@ -63,7 +62,7 @@
                 button{
                      @include stretched-link;
                      @include btn-outline(#fdfcfc,#000);
-                     @include outline;
+                     @include button;
                      margin-top: 0.5rem;
                      margin-bottom: 9rem;
                 }
@@ -131,7 +130,7 @@
                 }
                 button{
                     @include btn-outline(#b68b69,#fdfcfc);
-                    @include outline;
+                    @include button;
                     margin-top: 0.5rem;
                     margin-bottom: 1.5rem;
                     @include media-max($md) {
@@ -145,7 +144,9 @@
         background-color: #333a44;
         @include py(3.5rem);
         &#{-container}{
-            @include container;
+            max-width: 100rem;
+            margin: auto;
+            width: 100%;
             @include media-min($lg) {
                 @include px(5rem);
             }
@@ -160,7 +161,7 @@
             &#{-button}{
                 @include btn-outline(#fdfcfc,#333a44);
                 border-radius: 0.25rem;
-                @include outline;
+                @include button;
                 margin-top: 1rem;
                 margin-bottom: 2rem;
                 
@@ -178,25 +179,25 @@
     &#{-sec4}{
         background-size: cover;
         background-position: center;
-        height: 130vh;
+        height: 100vh;
 
         &#{-container}{
             @include container;
                 display: flex;
                 align-items: center;
+                height: 100%;
                 @include media-max($lg) {
                     align-items: flex-start;
                 }
-                height: 100%;
+                
             &#{-display}{
                 max-width: 1140px;
                 margin: 0 auto;
                 width: 100%;
-                margin-top: 5rem;
-                @include media-min($lg) {
-                    margin-top: -23rem;
-                }
+                margin-top: 3rem;
+                margin-bottom: 12rem;
                 @include media-max($lg) {
+                    
                     text-align: center;
                 }
                 h2{
@@ -215,12 +216,7 @@
                 }
                 button{
                     @include btn-outline(#fdfcfc,#101010);
-                    border-radius: 0.25rem;
-                    font-size: 1.125rem;
-                    font-weight: bolder;
-                    padding: 0.625rem 2.75rem;
-                    margin-top: 0.5rem;
-                    margin-bottom: 2.5rem;
+                    @include button;
                 }
             }
         }
@@ -247,21 +243,18 @@
             }
             button{
                 @include btn-outline(#fdfcfc,#707882);
-                border-radius: 0.25rem;
-                font-size: 1.125rem;
-                font-weight: bolder;
-                padding: 0.625rem 2.5rem;
+                @include button;
             }
             &#{-row}{
                 @include row;
                 @include my(2rem);
 
                 &#{-col}{
-                        @include col(100%);
-                        @include media-min($lg) {
+                    @include col(100%);
+                    @include media-min($lg) {
                         @include col(33.333%);
                     }
-                    @include py(0.625rem);
+                    @include py(0.375rem);
                     
                     img{
                         max-width: 100%;
@@ -273,7 +266,7 @@
     &#{-sec6}{
         background-size: cover;
         background-position: center;
-        height: 100vh;
+        height: 65vh;
 
         &#{-container}{
             @include container;
@@ -305,10 +298,7 @@
                 }
                 button{
                     @include btn-outline(#fdfcfc,#707882);
-                    border-radius: 0.25rem;
-                    font-size: 1.125rem;
-                    font-weight: bolder;
-                    padding: 0.625rem 1.5rem;
+                    @include button;
                     margin-top: 0.5rem;
                 }
             }
@@ -364,17 +354,37 @@
         }
     }
     .slick-dots{
-        li>button:before{
-            content: '';
-            width: 0.5rem;
-            height: 0.5rem;
-            border-radius: 50%;
-            border:solid 0.125rem #fff;
-            opacity: 1;
-        }
+        li{
+            width: 0.75rem;
+            height: 1.5rem;
+            position: relative;
 
-        li.slick-active>button:before{
-            background-color: #fff;
+            button{
+                width: 0.75rem;
+                height: 1.5rem;
+            }
+            
+            >button:before{
+                content: '';
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%,-50%);
+                width: 0.25rem;
+                height: 0.25rem;
+                border-radius: 50%;
+                background-color: #fff;
+                opacity: 1;
+            }
+            &:hover{
+                button::before{
+                    background-color: #5d5854;
+                }
+            }
+            &.slick-active>button::before{
+                background-color: #5d5854;
+            }
+    
         }
 
     }
