--- a/src/main.scss
+++ b/src/main.scss
@@ -4,13 +4,14 @@
 @import 'scss/component';
 @import 'scss/reset';
 //@import 'scss/font-awesome-5.11.2/index';
-@import 'scss/page/header';
-@import 'scss/page/footer';
-@import 'scss/page/home';
-@import 'scss/page/about';
-@import 'scss/page/applications';
-@import 'scss/page/knowledge';
 @import 'scss/fancyapps/index';
 @import 'scss/slick-carousel/slick';
 @import 'scss/slick-carousel/slick-theme';
+@import 'scss/page/header';
+@import 'scss/page/footer';
+@import 'scss/page/home';
+@import 'scss/page/ourBraud';
+@import 'scss/page/about';
+@import 'scss/page/applications';
+@import 'scss/page/knowledge';
 @import 'scss/browserReplacement';
