--- a/src/scss/_component.scss
+++ b/src/scss/_component.scss
@@ -1,7 +1,8 @@
 @mixin stretched-link {
     position: relative;
 
-    a::after {
+    button,a {
+        &::after{
         position: absolute;
         top: 0;
         right: 0;
@@ -13,6 +14,7 @@
         pointer-events: auto;
         content: "";
         background-color: rgba(0, 0, 0, 0);
+        }
     }
 }
 
