--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2211,7 +2211,7 @@ footer {
 .home-sec1-container-display h2 {
   font-weight: bolder;
   color: #fdfcfc;
-  margin-bottom: 0.5rem;
+  line-height: 1.2;
   text-shadow: 0.0625rem 0.0625rem 0.25rem rgba(0, 0, 0, 0.8);
 }
 
@@ -2259,8 +2259,7 @@ footer {
 
 .home-sec1-container-display h3 {
   color: #fdfcfc;
-  margin-top: 0.5rem;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
   text-shadow: 0.0625rem 0.0625rem 0.25rem rgba(0, 0, 0, 0.8);
 }
 
@@ -2461,7 +2460,7 @@ footer {
   font-weight: bolder;
   color: #b68b69;
   padding-top: 0.5rem;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 @media (min-width: 350px) {
@@ -2513,7 +2512,6 @@ footer {
 }
 
 .home-sec2-container-display h3 {
-  font-weight: bolder;
   color: #b68b69;
   line-height: 1.2;
   margin-bottom: 1rem;
@@ -2640,7 +2638,7 @@ footer {
 .home-sec3-container h2 {
   color: #fdfcfc;
   font-weight: bolder;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
   padding-top: 1.125rem;
 }
 
@@ -2739,7 +2737,6 @@ footer {
 .home-sec3-container h3 a {
   color: #fdfcfc;
   font-size: 1.5rem;
-  font-weight: bolder;
 }
 
 .home-sec4 {
@@ -2812,7 +2809,8 @@ footer {
 .home-sec4-container-display h2 {
   font-weight: bolder;
   color: #fdfcfc;
-  margin-bottom: 1rem;
+  line-height: 1.2;
+  margin-bottom: 0.75rem;
 }
 
 @media (min-width: 350px) {
@@ -2991,6 +2989,7 @@ footer {
 .home-sec5-container h2 {
   color: #fdfcfc;
   font-weight: bolder;
+  line-height: 1.2;
   margin-bottom: 0.5rem;
 }
 
@@ -3237,7 +3236,8 @@ footer {
 .home-sec6-container-display h2 {
   font-weight: bolder;
   color: #fdfcfc;
-  margin-bottom: 0.75rem;
+  margin-bottom: 0.5rem;
+  line-height: 1.2;
   text-shadow: 0.0625rem 0.0625rem 0.25rem rgba(0, 0, 0, 0.8);
 }
 
@@ -3284,7 +3284,6 @@ footer {
 }
 
 .home-sec6-container-display h3 {
-  font-weight: bolder;
   color: #fdfcfc;
   margin-top: 0.5rem;
   margin-bottom: 0.75rem;
@@ -3387,67 +3386,95 @@ footer {
   width: 100%;
 }
 
-#silck-applications .slick-prev {
-  left: -20px;
-}
-
-#silck-applications .slick-prev::before {
-  content: '';
-}
-
-#silck-applications .slick-prev img {
-  -webkit-transform: translate(-100%, -50%);
-          transform: translate(-100%, -50%);
-  cursor: pointer;
-  width: 4rem;
-  height: 5.5rem;
-}
-
-#silck-applications .slick-next {
-  right: -20px;
-}
-
-#silck-applications .slick-next::before {
-  content: '';
-}
-
-#silck-applications .slick-next img {
-  -webkit-transform: translate(100%, -50%);
-          transform: translate(100%, -50%);
-  cursor: pointer;
-  width: 4rem;
-  height: 5.5rem;
-}
-
 #silck-applications .slick-arrow {
-  padding: 0;
-  width: auto;
-  height: auto;
-  z-index: 1000;
-  background-color: transparent;
-  cursor: auto;
-}
-
-#silck-applications .slick-arrow:active {
+  top: 50%;
+  background-color: #212530;
+  width: 2.875rem;
+  height: 5rem;
+  z-index: 900;
+  border-radius: 0.25rem;
   -webkit-box-shadow: none;
           box-shadow: none;
 }
 
-@media (max-width: 992px) {
+@media (max-width: 768px) {
   #silck-applications .slick-arrow {
     display: none !important;
   }
 }
 
+#silck-applications .slick-arrow::after {
+  content: '';
+  position: absolute;
+  background-color: #fff;
+  top: 50%;
+  border-radius: 0.25rem;
+  width: 0.625rem;
+  height: 0.125rem;
+  opacity: 1;
+}
+
+#silck-applications .slick-arrow::before {
+  content: '';
+  position: absolute;
+  background-color: #fff;
+  bottom: 50%;
+  border-radius: 0.25rem;
+  width: 0.625rem;
+  height: 0.125rem;
+  opacity: 1;
+}
+
+#silck-applications .slick-prev {
+  left: 1.75rem;
+  -webkit-transform: translate(0, -50%);
+          transform: translate(0, -50%);
+}
+
+#silck-applications .slick-prev::after {
+  -webkit-transform: translate(0.325rem, 0.15rem) rotate(65deg);
+          transform: translate(0.325rem, 0.15rem) rotate(65deg);
+  right: 50%;
+}
+
+#silck-applications .slick-prev::before {
+  -webkit-transform: translate(0.3rem, -0.15rem) rotate(-65deg);
+          transform: translate(0.3rem, -0.15rem) rotate(-65deg);
+  right: 50%;
+}
+
+#silck-applications .slick-next {
+  right: 1.75rem;
+  -webkit-transform: translate(0, -50%);
+          transform: translate(0, -50%);
+}
+
+#silck-applications .slick-next::after {
+  -webkit-transform: translate(-0.3rem, -0.35rem) rotate(65deg);
+          transform: translate(-0.3rem, -0.35rem) rotate(65deg);
+  left: 50%;
+}
+
+#silck-applications .slick-next::before {
+  -webkit-transform: translate(-0.3rem, 0.35rem) rotate(-65deg);
+          transform: translate(-0.3rem, 0.35rem) rotate(-65deg);
+  left: 50%;
+}
+
+#silck-applications .slick-dots {
+  bottom: -2.5rem;
+}
+
 #silck-applications .slick-dots li {
-  width: 0.75rem;
-  height: 1.5rem;
+  width: 1rem;
+  height: 1rem;
   position: relative;
+  margin: 0;
 }
 
 #silck-applications .slick-dots li button {
-  width: 0.75rem;
-  height: 1.5rem;
+  width: 1rem;
+  height: 1rem;
 }
 
 #silck-applications .slick-dots li > button:before {
@@ -3457,8 +3484,8 @@ footer {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  width: 0.25rem;
-  height: 0.25rem;
+  width: 0.5rem;
+  height: 0.5rem;
   border-radius: 50%;
   background-color: #fff;
   opacity: 1;
@@ -3520,8 +3547,349 @@ footer {
   }
 }
 
+#banner-ourbraud {
+  margin-bottom: 0;
+}
+
+#banner-ourbraud .silck-item {
+  position: relative;
+  height: 45.5rem;
+}
+
+@media (max-width: 992px) {
+  #banner-ourbraud .silck-item {
+    height: 36rem;
+  }
+}
+
+@media (max-width: 768px) {
+  #banner-ourbraud .silck-item {
+    height: 28.5rem;
+  }
+}
+
+@media (max-width: 576px) {
+  #banner-ourbraud .silck-item {
+    height: 21.75rem;
+  }
+}
+
+@media (max-width: 400px) {
+  #banner-ourbraud .silck-item {
+    height: 15.5rem;
+  }
+}
+
+@media (max-width: 350px) {
+  #banner-ourbraud .silck-item {
+    height: 13.8rem;
+  }
+}
+
+#banner-ourbraud .silck-item figure img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  max-height: 46rem;
+}
+
+#banner-ourbraud .silck-item figure mask {
+  position: absolute;
+  z-index: 5;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: -0.125rem;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+#banner-ourbraud .silck-item .silck-item-heading {
+  position: absolute;
+  z-index: 10;
+  top: 50%;
+  left: 0;
+  right: 0;
+  -webkit-transform: translate(0, -50%);
+          transform: translate(0, -50%);
+}
+
+@media (max-width: 768px) {
+  #banner-ourbraud .silck-item .silck-item-heading {
+    display: none;
+  }
+}
+
+#banner-ourbraud .silck-item .silck-item-heading h2 {
+  max-width: 1140px;
+  margin: 0 auto;
+  width: 100%;
+  text-shadow: 0.0625rem 0.0625rem 0.25rem rgba(0, 0, 0, 0.8);
+}
+
+@media (min-width: 350px) {
+  #banner-ourbraud .silck-item .silck-item-heading h2 {
+    font-size: 2rem;
+  }
+}
+
+@media (min-width: 400px) {
+  #banner-ourbraud .silck-item .silck-item-heading h2 {
+    font-size: 2.5rem;
+  }
+}
+
+@media (min-width: 576px) {
+  #banner-ourbraud .silck-item .silck-item-heading h2 {
+    font-size: 3rem;
+  }
+}
+
+@media (min-width: 768px) {
+  #banner-ourbraud .silck-item .silck-item-heading h2 {
+    font-size: 3.125rem;
+  }
+}
+
+@media (min-width: 992px) {
+  #banner-ourbraud .silck-item .silck-item-heading h2 {
+    font-size: 3.125rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  #banner-ourbraud .silck-item .silck-item-heading h2 {
+    font-size: 3.125rem;
+  }
+}
+
+@media (min-width: 1600px) {
+  #banner-ourbraud .silck-item .silck-item-heading h2 {
+    font-size: 3.125rem;
+  }
+}
+
+@media (max-width: 1200px) {
+  #banner-ourbraud .silck-item .silck-item-heading h2 {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+}
+
+@media (max-width: 992px) {
+  #banner-ourbraud .silck-item .silck-item-heading h2 {
+    text-align: center;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+}
+
+#banner-ourbraud .silck-item .silck-item-heading h3 {
+  max-width: 1140px;
+  margin: 0 auto;
+  width: 100%;
+  text-shadow: 0.0625rem 0.0625rem 0.25rem rgba(0, 0, 0, 0.8);
+}
+
+@media (min-width: 350px) {
+  #banner-ourbraud .silck-item .silck-item-heading h3 {
+    font-size: 1rem;
+  }
+}
+
+@media (min-width: 400px) {
+  #banner-ourbraud .silck-item .silck-item-heading h3 {
+    font-size: 1.125rem;
+  }
+}
+
+@media (min-width: 576px) {
+  #banner-ourbraud .silck-item .silck-item-heading h3 {
+    font-size: 1.125rem;
+  }
+}
+
+@media (min-width: 768px) {
+  #banner-ourbraud .silck-item .silck-item-heading h3 {
+    font-size: 1.25rem;
+  }
+}
+
+@media (min-width: 992px) {
+  #banner-ourbraud .silck-item .silck-item-heading h3 {
+    font-size: 1.25rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  #banner-ourbraud .silck-item .silck-item-heading h3 {
+    font-size: 1.25rem;
+  }
+}
+
+@media (min-width: 1600px) {
+  #banner-ourbraud .silck-item .silck-item-heading h3 {
+    font-size: 1.25rem;
+  }
+}
+
+@media (max-width: 1200px) {
+  #banner-ourbraud .silck-item .silck-item-heading h3 {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+}
+
+@media (max-width: 992px) {
+  #banner-ourbraud .silck-item .silck-item-heading h3 {
+    text-align: center;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+}
+
+#banner-ourbraud .silck-item .silck-item-video {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#banner-ourbraud .silck-item .silck-item-video iframe {
+  height: 44rem;
+}
+
+@media (max-width: 992px) {
+  #banner-ourbraud .silck-item .silck-item-video iframe {
+    height: 34rem;
+  }
+}
+
+@media (max-width: 768px) {
+  #banner-ourbraud .silck-item .silck-item-video iframe {
+    height: 27rem;
+  }
+}
+
+@media (max-width: 576px) {
+  #banner-ourbraud .silck-item .silck-item-video iframe {
+    height: 20.25rem;
+  }
+}
+
+@media (max-width: 400px) {
+  #banner-ourbraud .silck-item .silck-item-video iframe {
+    height: 14rem;
+  }
+}
+
+@media (max-width: 350px) {
+  #banner-ourbraud .silck-item .silck-item-video iframe {
+    height: 12.3rem;
+  }
+}
+
+#banner-ourbraud .slick-arrow {
+  background-color: transparent;
+  width: 2.875rem;
+  height: 4.75rem;
+  z-index: 15;
+}
+
+#banner-ourbraud .slick-arrow::after {
+  content: '';
+  position: absolute;
+  background-color: #e5e3ea;
+  top: 50%;
+  width: 1.5rem;
+  height: 0.125rem;
+  opacity: 1;
+}
+
+#banner-ourbraud .slick-arrow::before {
+  content: '';
+  position: absolute;
+  background-color: #e5e3ea;
+  bottom: 50%;
+  width: 1.5rem;
+  height: 0.125rem;
+  opacity: 1;
+}
+
+#banner-ourbraud .slick-prev {
+  top: 50%;
+  left: 0;
+  -webkit-transform: translate(0, 0);
+          transform: translate(0, 0);
+}
+
+#banner-ourbraud .slick-prev::after {
+  -webkit-transform: translate(0.5rem, 0.45rem) rotate(45deg);
+          transform: translate(0.5rem, 0.45rem) rotate(45deg);
+  right: 50%;
+}
+
+#banner-ourbraud .slick-prev::before {
+  -webkit-transform: translate(0.5rem, -0.45rem) rotate(-45deg);
+          transform: translate(0.5rem, -0.45rem) rotate(-45deg);
+  right: 50%;
+}
+
+#banner-ourbraud .slick-next {
+  top: 50%;
+  right: 0;
+  -webkit-transform: translate(0, 0);
+          transform: translate(0, 0);
+}
+
+#banner-ourbraud .slick-next::after {
+  -webkit-transform: translate(-0.5rem, -0.55rem) rotate(45deg);
+          transform: translate(-0.5rem, -0.55rem) rotate(45deg);
+  left: 50%;
+}
+
+#banner-ourbraud .slick-next::before {
+  -webkit-transform: translate(-0.5rem, 0.55rem) rotate(-45deg);
+          transform: translate(-0.5rem, 0.55rem) rotate(-45deg);
+  left: 50%;
+}
+
+#banner-ourbraud .slick-dots {
+  bottom: 0;
+}
+
+#banner-ourbraud .slick-dots li {
+  width: 0.75rem;
+  height: 1.5rem;
+  position: relative;
+}
+
+#banner-ourbraud .slick-dots li button {
+  width: 0.75rem;
+  height: 1.5rem;
+}
+
+#banner-ourbraud .slick-dots li > button:before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 0.25rem;
+  height: 0.25rem;
+  border-radius: 50%;
+  background-color: #fff;
+  opacity: 1;
+}
+
+#banner-ourbraud .slick-dots li:hover button::before {
+  background-color: #5d5854;
+}
+
+#banner-ourbraud .slick-dots li.slick-active > button::before {
+  background-color: #5d5854;
+}
+
 .about-sec1 {
-  height: 100vh;
+  height: 80vh;
   background-size: cover;
   background-position: center center;
 }
@@ -4546,21 +4914,6 @@ footer {
       flex-shrink: 0;
 }
 
-@media (max-width: 992px) {
-  .about-sec6-container-row-col {
-    padding-left: 15px;
-    padding-right: 15px;
-    -ms-flex-preferred-size: 50%;
-        flex-basis: 50%;
-    max-width: 50%;
-    -webkit-box-flex: 0;
-        -ms-flex-positive: 0;
-            flex-grow: 0;
-    -ms-flex-negative: 0;
-        flex-shrink: 0;
-  }
-}
-
 @media (max-width: 576px) {
   .about-sec6-container-row-col {
     padding-left: 15px;
@@ -4804,6 +5157,10 @@ footer {
   left: 60%;
 }
 
+#silck-about {
+  margin-bottom: 10rem;
+}
+
 #silck-about .silck-item {
   padding: 0 1rem;
 }
@@ -4861,10 +5218,11 @@ footer {
 
 #silck-about .slick-arrow {
   top: 50%;
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: #212530;
   width: 2.875rem;
   height: 5rem;
   z-index: 900;
+  border-radius: 0.25rem;
   -webkit-box-shadow: none;
           box-shadow: none;
 }
@@ -4878,7 +5236,7 @@ footer {
 #silck-about .slick-arrow::after {
   content: '';
   position: absolute;
-  background-color: #8d8c93;
+  background-color: #fff;
   top: 50%;
   width: 1rem;
   height: 0.125rem;
@@ -4888,7 +5246,7 @@ footer {
 #silck-about .slick-arrow::before {
   content: '';
   position: absolute;
-  background-color: #8d8c93;
+  background-color: #fff;
   bottom: 50%;
   width: 1rem;
   height: 0.125rem;
@@ -4902,14 +5260,14 @@ footer {
 }
 
 #silck-about .slick-prev::after {
-  -webkit-transform: translate(0.5rem, 0.35rem) rotate(50deg);
-          transform: translate(0.5rem, 0.35rem) rotate(50deg);
+  -webkit-transform: translate(0.5rem, 0.3rem) rotate(50deg);
+          transform: translate(0.5rem, 0.3rem) rotate(50deg);
   right: 50%;
 }
 
 #silck-about .slick-prev::before {
-  -webkit-transform: translate(0.5rem, -0.35rem) rotate(-50deg);
-          transform: translate(0.5rem, -0.35rem) rotate(-50deg);
+  -webkit-transform: translate(0.5rem, -0.3rem) rotate(-50deg);
+          transform: translate(0.5rem, -0.3rem) rotate(-50deg);
   right: 50%;
 }
 
@@ -4931,19 +5289,24 @@ footer {
   left: 50%;
 }
 
+#silck-about .slick-arrow.slick-disabled {
+  display: none !important;
+}
+
 #silck-about .slick-dots {
-  bottom: -1.75rem;
+  bottom: -2.5rem;
 }
 
 #silck-about .slick-dots li {
-  width: 0.75rem;
-  height: 1.5rem;
+  width: 1rem;
+  height: 1rem;
   position: relative;
+  margin: 0;
 }
 
 #silck-about .slick-dots li button {
-  width: 0.75rem;
-  height: 1.5rem;
+  width: 1rem;
+  height: 1rem;
 }
 
 #silck-about .slick-dots li > button:before {
@@ -4953,8 +5316,8 @@ footer {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  width: 0.25rem;
-  height: 0.25rem;
+  width: 0.5rem;
+  height: 0.5rem;
   border-radius: 50%;
   background-color: #aaa;
   opacity: 1;
