--- a/src/scss/page/_home.scss
+++ b/src/scss/page/_home.scss
@@ -49,14 +49,13 @@
                     @include display-2;
                     font-weight: bolder;
                     color: #fdfcfc;
-                    margin-bottom: 0.5rem;
+                    line-height: 1.2;
                     text-shadow: 0.0625rem 0.0625rem 0.25rem rgba(0,0,0,0.8);
                 }
                 h3{
                     @include display-4;
                     color: #fdfcfc;
-                    margin-top: 0.5rem;
-                    margin-bottom: 1rem;
+                    margin-bottom: 0.5rem;
                     text-shadow: 0.0625rem 0.0625rem 0.25rem rgba(0,0,0,0.8);
                 }
                 button{
@@ -112,14 +111,13 @@
                     font-weight: bolder;
                     color: #b68b69;
                     padding-top: 0.5rem;
-                    margin-bottom: 1rem;
+                    margin-bottom: 0.5rem;
                     @include media-max($md) {
                         margin-bottom: 0.5rem;
                     }
                 }
                 h3{
                     @include display-5;
-                    font-weight: bolder;
                     color: #b68b69;
                     line-height: 1.2;
                     margin-bottom: 1rem;
@@ -155,7 +153,7 @@
                 color: #fdfcfc;
                 @include display-3;
                 font-weight: bolder;
-                margin-bottom: 1rem;
+                margin-bottom: 0.5rem;
                 padding-top: 1.125rem;
             }
             &#{-button}{
@@ -171,7 +169,6 @@
                 a{
                     color: #fdfcfc;
                     font-size: 1.5rem;
-                    font-weight: bolder;
                 }
             }
         }
@@ -204,7 +201,8 @@
                     @include display-3;
                     font-weight: bolder;
                     color: #fdfcfc;
-                    margin-bottom: 1rem;
+                    line-height: 1.2;
+                    margin-bottom: 0.75rem;
                 }
                 h3{
                     @include display-5;
@@ -231,6 +229,7 @@
                 color: #fdfcfc;
                 @include display-3;
                 font-weight: bolder;
+                line-height: 1.2;
                 margin-bottom: 0.5rem;
                 @include media-max($md) {
                     margin-bottom: 0.25rem;
@@ -285,12 +284,12 @@
                     @include display-3;
                     font-weight: bolder;
                     color: #fdfcfc;
-                    margin-bottom: 0.75rem;
+                    margin-bottom: 0.5rem;
+                    line-height: 1.2;
                     text-shadow: 0.0625rem 0.0625rem 0.25rem rgba(0,0,0,0.8);
                 }
                 h3{
                     @include display-5;
-                    font-weight: bolder;
                     color: #fdfcfc;
                     margin-top: 0.5rem;
                     margin-bottom: 0.75rem;
@@ -315,53 +314,76 @@
             width: 100%;
         }
     }
-    .slick-prev{
-        left: -20px;
-        &::before{
-            content: '';
-        }
-        img{
-            transform: translate(-100%,-50%);
-            cursor: pointer;
-            width: 4rem;
-            height: 5.5rem;
-        }
-    }
-    .slick-next{
-        right: -20px;
-        &::before{
-            content: '';
-        }
-        img{
-            transform: translate(100%,-50%);
-            cursor: pointer;
-            width: 4rem;
-            height: 5.5rem;
-        }
-    }
     .slick-arrow{
-        padding: 0;
-        width: auto;
-        height: auto;
-        z-index: 1000;
-        background-color: transparent;
-        cursor: auto;
-        &:active{
-            box-shadow: none;
-        }
-        @include media-max($lg) {
+        @include media-max($md) {
             display: none !important;
         }
+        top: 50%;
+        background-color: #212530;
+        width: 2.875rem;
+        height: 5rem;
+        z-index: 900;
+        border-radius: 0.25rem;
+        box-shadow: none;
+        &::after{
+            content: '';
+            position: absolute;
+            background-color: #fff;
+            top: 50%;
+            border-radius: 0.25rem;
+            width: 0.625rem;
+            height: 0.125rem;
+            opacity: 1;
+        }
+        &::before{
+            content: '';
+            position: absolute;
+            background-color: #fff;
+            bottom: 50%;
+            border-radius: 0.25rem;
+            width: 0.625rem;
+            height: 0.125rem;
+            opacity: 1;
+        }
     }
+    
+    .slick-prev{
+        left: 1.75rem;
+        transform: translate(0,-50%);
+        &::after{
+            transform: translate(0.325rem,0.15rem) rotate(65deg);
+            right: 50%;
+        }
+        &::before{
+            transform: translate(0.3rem,-0.15rem) rotate(-65deg);
+            right: 50%;
+        }
+        
+    }
+    .slick-next{
+        right: 1.75rem;
+        transform: translate(0,-50%);
+        &::after{
+            transform: translate(-0.3rem,-0.35rem) rotate(65deg);
+            left: 50%;
+        }
+        &::before{
+            transform: translate(-0.3rem,0.35rem) rotate(-65deg);
+            left: 50%;
+        }
+    }
+
     .slick-dots{
+        bottom: -2.5rem;;
         li{
-            width: 0.75rem;
-            height: 1.5rem;
+            width: 1rem;
+            height: 1rem;
             position: relative;
+            margin: 0;
 
             button{
-                width: 0.75rem;
-                height: 1.5rem;
+                width: 1rem;
+                height: 1rem;
             }
             
             >button:before{
@@ -370,8 +392,8 @@
                 top: 50%;
                 left: 50%;
                 transform: translate(-50%,-50%);
-                width: 0.25rem;
-                height: 0.25rem;
+                width: 0.5rem;
+                height: 0.5rem;
                 border-radius: 50%;
                 background-color: #fff;
                 opacity: 1;
@@ -386,7 +408,6 @@
             }
     
         }
-
     }
 }
 
