--- a/src/scss/page/_applications.scss
+++ b/src/scss/page/_applications.scss
@@ -137,30 +137,17 @@
         }
         
     }
-    .slick-next{
-        top: 50%;
-        right: 0;
-        transform: translate(0,0);
-        &::after{
-            transform: translate(-0.5rem,-0.55rem) rotate(45deg);
-            left: 50%;
-        }
-        &::before{
-            transform: translate(-0.5rem,0.55rem) rotate(-45deg);
-            left: 50%;
-        }
-    }
-
     .slick-dots{
-        bottom: 0;
+        bottom: 1rem;;
         li{
-            width: 0.75rem;
-            height: 1.5rem;
+            width: 1rem;
+            height: 1rem;
             position: relative;
+            margin: 0;
 
             button{
-                width: 0.75rem;
-                height: 1.5rem;
+                width: 1rem;
+                height: 1rem;
             }
             
             >button:before{
@@ -169,8 +156,8 @@
                 top: 50%;
                 left: 50%;
                 transform: translate(-50%,-50%);
-                width: 0.25rem;
-                height: 0.25rem;
+                width: 0.5rem;
+                height: 0.5rem;
                 border-radius: 50%;
                 background-color: #fff;
                 opacity: 1;
