--- a/src/scss/page/_home.scss
+++ b/src/scss/page/_home.scss
@@ -146,7 +146,7 @@
             margin: auto;
             width: 100%;
             @include media-min($lg) {
-                @include px(5rem);
+                @include px(4.5rem);
             }
             text-align: center;
             h2{
@@ -206,7 +206,6 @@
                 }
                 h3{
                     @include display-5;
-                    font-weight: bolder;
                     color: #fdfcfc;
                     margin-top: 0.5rem;
                     margin-bottom: 1rem;
@@ -255,8 +254,14 @@
                     }
                     @include py(0.375rem);
                     
-                    img{
-                        max-width: 100%;
+                    > a > figure{
+                        background-size: cover;
+                        background-position: center;
+                        width: 100%;
+                        height: 18rem;
+                        @include media-max($sm) {
+                            height: 12rem;
+                        }
                     }
                 }
             }
@@ -306,6 +311,8 @@
 }
 
 #silck-applications{
+
+
     figure{
         width: 100%;
         text-align: center;
@@ -319,7 +326,7 @@
             display: none !important;
         }
         top: 50%;
-        background-color: #212530;
+        background-color: #4c525b;
         width: 2.875rem;
         height: 5rem;
         z-index: 900;
@@ -348,8 +355,8 @@
     }
     
     .slick-prev{
-        left: 1.75rem;
-        transform: translate(0,-50%);
+        left: -3.5rem;
+        transform: translate(0,-100%);
         &::after{
             transform: translate(0.325rem,0.15rem) rotate(65deg);
             right: 50%;
@@ -361,8 +368,8 @@
         
     }
     .slick-next{
-        right: 1.75rem;
-        transform: translate(0,-50%);
+        right: -3.5rem;
+        transform: translate(0,-100%);
         &::after{
             transform: translate(-0.3rem,-0.35rem) rotate(65deg);
             left: 50%;
