--- a/src/scss/_browserReplacement.scss
+++ b/src/scss/_browserReplacement.scss
@@ -40,6 +40,13 @@
         }
         
     }
+    .ourbraud-sec5_table-body-row-col{
+        padding-top: 0.75rem; 
+        padding-bottom: 1rem; 
+    }
+    .ourbraud-sec5_table-body-row{
+        padding-bottom: 1.5rem; 
+    }
 }
 
 // Target IE Edge
