--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2105,6 +2105,7 @@ footer {
   background-color: white;
   border-radius: 50%;
   margin: 0.25rem;
+  position: relative;
 }
 
 .btn-icon:hover {
@@ -2115,6 +2116,20 @@ footer {
   position: relative;
   width: 1.375rem;
   height: 1.375rem;
+}
+
+.btn-icon::after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  pointer-events: auto;
+  content: "";
+  background-color: rgba(0, 0, 0, 0);
 }
 
 .home-sec1 {
@@ -3828,6 +3843,12 @@ footer {
   z-index: 15;
 }
 
+@media (max-width: 768px) {
+  #banner-ourbraud .slick-arrow {
+    display: none !important;
+  }
+}
+
 #banner-ourbraud .slick-arrow::after {
   content: '';
   position: absolute;
@@ -3851,8 +3872,8 @@ footer {
 #banner-ourbraud .slick-prev {
   top: 50%;
   left: 0;
-  -webkit-transform: translate(0, 0);
-          transform: translate(0, 0);
+  -webkit-transform: translate(50%, -50%);
+          transform: translate(50%, -50%);
 }
 
 #banner-ourbraud .slick-prev::after {
@@ -3870,8 +3891,8 @@ footer {
 #banner-ourbraud .slick-next {
   top: 50%;
   right: 0;
-  -webkit-transform: translate(0, 0);
-          transform: translate(0, 0);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 
 #banner-ourbraud .slick-next::after {
@@ -4419,6 +4440,8 @@ footer {
     -webkit-box-ordinal-group: 2;
         -ms-flex-order: 1;
             order: 1;
+    border-left: 0;
+    border-right: 0;
   }
 }
 
@@ -7190,6 +7213,482 @@ footer {
   margin-bottom: 0.25rem;
 }
 
+.social-banner {
+  height: 40rem;
+  background-size: cover;
+  background-position: center;
+  padding-top: 6.5rem;
+}
+
+@media (max-width: 992px) {
+  .social-banner {
+    height: 30rem;
+    background-position: 35% center;
+    padding-top: 5rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .social-banner {
+    height: 25rem;
+    padding-top: 3.75rem;
+  }
+}
+
+@media (max-width: 576px) {
+  .social-banner {
+    height: 20rem;
+    padding-top: 2.5rem;
+  }
+}
+
+.social-banner-display h2 {
+  color: #000;
+  text-align: center;
+}
+
+@media (min-width: 350px) {
+  .social-banner-display h2 {
+    font-size: 2.25rem;
+  }
+}
+
+@media (min-width: 400px) {
+  .social-banner-display h2 {
+    font-size: 2.5rem;
+  }
+}
+
+@media (min-width: 576px) {
+  .social-banner-display h2 {
+    font-size: 3rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .social-banner-display h2 {
+    font-size: 3.5rem;
+  }
+}
+
+@media (min-width: 992px) {
+  .social-banner-display h2 {
+    font-size: 4rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .social-banner-display h2 {
+    font-size: 4.5rem;
+  }
+}
+
+@media (min-width: 1600px) {
+  .social-banner-display h2 {
+    font-size: 4.5rem;
+  }
+}
+
+.social-main-container {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
+@media (min-width: 576px) {
+  .social-main-container {
+    max-width: 516px;
+  }
+}
+
+@media (min-width: 768px) {
+  .social-main-container {
+    max-width: 708px;
+  }
+}
+
+@media (min-width: 992px) {
+  .social-main-container {
+    max-width: 932px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .social-main-container {
+    max-width: 1140px;
+  }
+}
+
+@media (min-width: 1600px) {
+  .social-main-container {
+    max-width: 1420px;
+  }
+}
+
+.social-main-container-display h2 {
+  text-align: center;
+  color: #000;
+  font-weight: bolder;
+  margin-bottom: 1.5rem;
+}
+
+@media (min-width: 350px) {
+  .social-main-container-display h2 {
+    font-size: 1.5rem;
+  }
+}
+
+@media (min-width: 400px) {
+  .social-main-container-display h2 {
+    font-size: 1.75rem;
+  }
+}
+
+@media (min-width: 576px) {
+  .social-main-container-display h2 {
+    font-size: 2rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .social-main-container-display h2 {
+    font-size: 2.5rem;
+  }
+}
+
+@media (min-width: 992px) {
+  .social-main-container-display h2 {
+    font-size: 2.5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .social-main-container-display h2 {
+    font-size: 2.5rem;
+  }
+}
+
+@media (min-width: 1600px) {
+  .social-main-container-display h2 {
+    font-size: 2.5rem;
+  }
+}
+
+.social-main-container-tab {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.social-main-container-tab-navbar {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.social-main-container-tab-pagination {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  overflow: hidden;
+}
+
+.social-main_navbar-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: -15px;
+  margin-right: -15px;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-left: 0;
+  margin-right: 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.social-main_navbar-row-col {
+  padding-left: 15px;
+  padding-right: 15px;
+  -ms-flex-preferred-size: 10%;
+      flex-basis: 10%;
+  max-width: 10%;
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+
+@media (max-width: 992px) {
+  .social-main_navbar-row-col {
+    padding-left: 15px;
+    padding-right: 15px;
+    -ms-flex-preferred-size: 20%;
+        flex-basis: 20%;
+    max-width: 20%;
+    -webkit-box-flex: 0;
+        -ms-flex-positive: 0;
+            flex-grow: 0;
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
+  }
+}
+
+@media (max-width: 400px) {
+  .social-main_navbar-row-col {
+    padding-left: 0.25rem;
+    padding-right: 0.25rem;
+  }
+}
+
+.social-main_navbar-row-col figure {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  position: relative;
+}
+
+.social-main_navbar-row-col figure button::after, .social-main_navbar-row-col figure a::after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  pointer-events: auto;
+  content: "";
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.social-main_navbar-row-col figure a {
+  display: block;
+}
+
+.social-main_navbar-row-col figure img {
+  max-width: 100%;
+  width: 115px;
+  display: block;
+}
+
+.social-main_navbar-row-col figure .active {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  opacity: 0;
+  z-index: 1;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.social-main_navbar-row-col figure::after {
+  content: '';
+  position: absolute;
+  bottom: -0.25rem;
+  left: 50%;
+  right: 50%;
+  height: 0.25rem;
+  background-color: #d62e33;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.social-main_navbar-row-col figure.active img {
+  opacity: 1;
+}
+
+.social-main_navbar-row-col figure.active::after {
+  left: 0;
+  right: 0;
+}
+
+.social-main_navbar-row-col figure:hover .active {
+  opacity: 1;
+}
+
+.social-main_navbar-row-col figure:hover::after {
+  left: 0;
+  right: 0;
+}
+
+.social-main_pagination-panels {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.social-main_pagination-panels-row {
+  width: 100%;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  margin-left: -15px;
+  margin-right: -15px;
+  overflow: hidden;
+  margin-left: 0;
+  margin-right: 0;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.social-main_pagination-panels-row-col {
+  padding-left: 15px;
+  padding-right: 15px;
+  max-width: 50%;
+  width: 100%;
+  float: left;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+@media (max-width: 576px) {
+  .social-main_pagination-panels-row-col {
+    padding-left: 15px;
+    padding-right: 15px;
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+    -webkit-box-flex: 0;
+        -ms-flex-positive: 0;
+            flex-grow: 0;
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
+  }
+}
+
+.social-main_pagination-panels-row-col figure {
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 12.5rem;
+  position: relative;
+}
+
+.social-main_pagination-panels-row-col figure button::after, .social-main_pagination-panels-row-col figure a::after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  pointer-events: auto;
+  content: "";
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.social-main_pagination-panels-row-col figure h4 {
+  padding-left: 2.25rem;
+  padding-right: 2.25rem;
+}
+
+@media (min-width: 350px) {
+  .social-main_pagination-panels-row-col figure h4 a {
+    font-size: 1.25rem;
+  }
+}
+
+@media (min-width: 400px) {
+  .social-main_pagination-panels-row-col figure h4 a {
+    font-size: 1.375rem;
+  }
+}
+
+@media (min-width: 576px) {
+  .social-main_pagination-panels-row-col figure h4 a {
+    font-size: 1.5rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .social-main_pagination-panels-row-col figure h4 a {
+    font-size: 1.5rem;
+  }
+}
+
+@media (min-width: 992px) {
+  .social-main_pagination-panels-row-col figure h4 a {
+    font-size: 1.5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .social-main_pagination-panels-row-col figure h4 a {
+    font-size: 1.5rem;
+  }
+}
+
+@media (min-width: 1600px) {
+  .social-main_pagination-panels-row-col figure h4 a {
+    font-size: 1.5rem;
+  }
+}
+
+.translateX-n0 {
+  -webkit-transform: translateX(0%) !important;
+          transform: translateX(0%) !important;
+}
+
+.translateX-n1 {
+  -webkit-transform: translateX(-100%) !important;
+          transform: translateX(-100%) !important;
+}
+
+.translateX-n2 {
+  -webkit-transform: translateX(-200%) !important;
+          transform: translateX(-200%) !important;
+}
+
+.translateX-n3 {
+  -webkit-transform: translateX(-300%) !important;
+          transform: translateX(-300%) !important;
+}
+
+.translateX-n4 {
+  -webkit-transform: translateX(-400%) !important;
+          transform: translateX(-400%) !important;
+}
+
+.translateX-n5 {
+  -webkit-transform: translateX(-500%) !important;
+          transform: translateX(-500%) !important;
+}
+
+.translateX-n6 {
+  -webkit-transform: translateX(-600%) !important;
+          transform: translateX(-600%) !important;
+}
+
+.translateX-n7 {
+  -webkit-transform: translateX(-700%) !important;
+          transform: translateX(-700%) !important;
+}
+
+.translateX-n8 {
+  -webkit-transform: translateX(-800%) !important;
+          transform: translateX(-800%) !important;
+}
+
+.translateX-n9 {
+  -webkit-transform: translateX(-900%) !important;
+          transform: translateX(-900%) !important;
+}
+
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
   .header_navbar-logo {
     -ms-flex-item-align: start;
@@ -7226,6 +7725,13 @@ footer {
     -webkit-box-flex: 1;
         -ms-flex: 1 1 100%;
             flex: 1 1 100%;
+  }
+  .ourbraud-sec5_table-body-row-col {
+    padding-top: 0.75rem;
+    padding-bottom: 1rem;
+  }
+  .ourbraud-sec5_table-body-row {
+    padding-bottom: 1.5rem;
   }
 }
 
