--- a/src/main.scss
+++ b/src/main.scss
@@ -14,4 +14,5 @@
 @import 'scss/page/about';
 @import 'scss/page/applications';
 @import 'scss/page/knowledge';
+@import 'scss/page/social';
 @import 'scss/browserReplacement';
