--- a/src/scss/page/_footer.scss
+++ b/src/scss/page/_footer.scss
@@ -97,4 +97,21 @@ footer{
         width: 1.375rem;
         height: 1.375rem;
     }
+    
+
+    position: relative;
+    &::after{
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        z-index: 999;
+        width: 100%;
+        height: 100%;
+        pointer-events: auto;
+        content: "";
+        background-color: rgba(0, 0, 0, 0);
+    }
+    
 }
