design、knowledge 切版

--- a/src/main.scss
+++ b/src/main.scss
@@ -14,5 +14,6 @@
 @import 'scss/page/about';
 @import 'scss/page/applications';
 @import 'scss/page/knowledge';
+@import 'scss/page/design';
 @import 'scss/page/social';
 @import 'scss/browserReplacement';
