--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1830,8 +1830,8 @@ main {
   right: -1.25rem;
   display: inline-block;
   pointer-events: none;
-  -webkit-transform: translateY(0) rotate(0deg);
-          transform: translateY(0) rotate(0deg);
+  -webkit-transform: translateY(-25%) rotate(0deg);
+          transform: translateY(-25%) rotate(0deg);
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   border-color: #fdfafa transparent transparent transparent;
@@ -1846,8 +1846,8 @@ main {
 }
 
 .header_navbar-ul-dropdown.active > a::after {
-  -webkit-transform: translateY(-50%) rotate(180deg);
-          transform: translateY(-50%) rotate(180deg);
+  -webkit-transform: translateY(-75%) rotate(180deg);
+          transform: translateY(-75%) rotate(180deg);
 }
 
 @media (min-width: 1200px) {
@@ -6506,6 +6506,7 @@ footer {
   font-size: 1.5rem;
   color: #505050;
   margin-bottom: 0.5rem;
+  font-weight: border;
 }
 
 .applications-container-heading p {
@@ -6628,6 +6629,7 @@ footer {
   color: #000;
   margin-top: 4rem;
   margin-bottom: 2rem;
+  font-weight: border;
 }
 
 @media (min-width: 350px) {
@@ -7060,15 +7062,58 @@ footer {
 
 .knowledge-sec2-container h2 {
   text-align: center;
-  font-size: 1.5rem;
-  font-weight: 700;
+  font-weight: bolder;
   margin-bottom: 0;
+  color: #000000;
+}
+
+@media (min-width: 350px) {
+  .knowledge-sec2-container h2 {
+    font-size: 1.25rem;
+  }
+}
+
+@media (min-width: 400px) {
+  .knowledge-sec2-container h2 {
+    font-size: 1.375rem;
+  }
+}
+
+@media (min-width: 576px) {
+  .knowledge-sec2-container h2 {
+    font-size: 1.5rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .knowledge-sec2-container h2 {
+    font-size: 1.5rem;
+  }
+}
+
+@media (min-width: 992px) {
+  .knowledge-sec2-container h2 {
+    font-size: 1.5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .knowledge-sec2-container h2 {
+    font-size: 1.5rem;
+  }
+}
+
+@media (min-width: 1600px) {
+  .knowledge-sec2-container h2 {
+    font-size: 1.5rem;
+  }
 }
 
 .knowledge-sec2-container h3 {
+  font-size: 0.9375rem;
   text-align: center;
-  font-size: 0.875rem;
-  font-weight: 700;
+  color: #000000;
+  margin-bottom: 3rem;
 }
 
 .knowledge-sec2_video-formGroup form {
@@ -7115,82 +7160,7 @@ footer {
   margin-right: -0.25rem;
 }
 
-.knowledge-sec2_video-row img {
-  width: 100%;
-}
-
-.knowledge-sec2_video-row h4 {
-  font-weight: 900;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
-.knowledge-sec2_video-row h4 span, .knowledge-sec2_video-row h4 a {
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
-.knowledge-sec2_video-row p {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-  height: 5rem;
-  overflow: hidden;
-  margin-bottom: 0.75rem;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
-.knowledge-sec2_video-row-col-1 {
-  position: relative;
-  padding-left: 15px;
-  padding-right: 15px;
-  -ms-flex-preferred-size: 25%;
-      flex-basis: 25%;
-  max-width: 25%;
-  -webkit-box-flex: 0;
-      -ms-flex-positive: 0;
-          flex-grow: 0;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-  height: 480px;
-}
-
-.knowledge-sec2_video-row-col-1 button::after, .knowledge-sec2_video-row-col-1 a::after {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 999;
-  width: 100%;
-  height: 100%;
-  pointer-events: auto;
-  content: "";
-  background-color: rgba(0, 0, 0, 0);
-}
-
-.knowledge-sec2_video-row-col-1 figure {
-  -webkit-box-shadow: 0 0.125rem 0.25rem 0.125rem rgba(0, 0, 0, 0.15);
-          box-shadow: 0 0.125rem 0.25rem 0.125rem rgba(0, 0, 0, 0.15);
-  overflow: hidden;
-}
-
-.knowledge-sec2_video-row-col-1 figure img {
-  width: 100%;
-  height: 330px;
-  background-size: cover;
-  margin-bottom: 0.25rem;
-}
-
-.knowledge-sec2_video-row-col-2 {
-  position: relative;
+.knowledge-sec2_video-row-col {
   padding-left: 15px;
   padding-right: 15px;
   -ms-flex-preferred-size: 50%;
@@ -7201,12 +7171,44 @@ footer {
           flex-grow: 0;
   -ms-flex-negative: 0;
       flex-shrink: 0;
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-  height: 480px;
+  padding-left: 0;
+  padding-right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
-.knowledge-sec2_video-row-col-2 button::after, .knowledge-sec2_video-row-col-2 a::after {
+@media (max-width: 992px) {
+  .knowledge-sec2_video-row-col {
+    padding-left: 15px;
+    padding-right: 15px;
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+    -webkit-box-flex: 0;
+        -ms-flex-positive: 0;
+            flex-grow: 0;
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
+  }
+}
+
+.knowledge-sec2_video-row-col-figure {
+  position: relative;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  -ms-flex-negative: 1;
+      flex-shrink: 1;
+  -ms-flex-preferred-size: auto;
+      flex-basis: auto;
+  width: 100%;
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+  height: 30rem;
+}
+
+.knowledge-sec2_video-row-col-figure button::after, .knowledge-sec2_video-row-col-figure a::after {
   position: absolute;
   top: 0;
   right: 0;
@@ -7220,17 +7222,429 @@ footer {
   background-color: rgba(0, 0, 0, 0);
 }
 
-.knowledge-sec2_video-row-col-2 figure {
+.knowledge-sec2_video-row-col-figure figure {
   -webkit-box-shadow: 0 0.125rem 0.125rem 0.125rem rgba(0, 0, 0, 0.15);
           box-shadow: 0 0.125rem 0.125rem 0.125rem rgba(0, 0, 0, 0.15);
   overflow: hidden;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
 }
 
-.knowledge-sec2_video-row-col-2 figure img {
+.knowledge-sec2_video-row-col-figure figure img {
   width: 100%;
-  height: 330px;
+  height: 20rem;
   background-size: cover;
   margin-bottom: 0.25rem;
+}
+
+.knowledge-sec2_video-row-col-figure figure h4 {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.knowledge-sec2_video-row-col-figure figure h4 span, .knowledge-sec2_video-row-col-figure figure h4 a {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.knowledge-sec2_video-row-col-figure figure h4 a {
+  font-size: 1.25rem;
+  color: #000000;
+  font-weight: bolder;
+}
+
+.knowledge-sec2_video-row-col-figure figure p {
+  line-height: 1.25rem;
+  height: 5rem;
+  overflow: hidden;
+  color: #000000;
+  font-size: 0.875rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  margin-bottom: 0.75rem;
+}
+
+.knowledge-sec2_video-row-col-figure figure:hover {
+  background-color: #c6d5e9;
+}
+
+.design-sec1 {
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+}
+
+.design-sec1-container {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100%;
+}
+
+@media (min-width: 576px) {
+  .design-sec1-container {
+    max-width: 516px;
+  }
+}
+
+@media (min-width: 768px) {
+  .design-sec1-container {
+    max-width: 708px;
+  }
+}
+
+@media (min-width: 992px) {
+  .design-sec1-container {
+    max-width: 932px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .design-sec1-container {
+    max-width: 1140px;
+  }
+}
+
+.design-sec1-container-display h2 {
+  font-weight: bolder;
+  color: white;
+  margin-bottom: 0.75rem;
+  text-shadow: 0.0625rem 0.0625rem 0.25rem rgba(0, 0, 0, 0.8);
+}
+
+@media (min-width: 350px) {
+  .design-sec1-container-display h2 {
+    font-size: 2rem;
+  }
+}
+
+@media (min-width: 400px) {
+  .design-sec1-container-display h2 {
+    font-size: 2.5rem;
+  }
+}
+
+@media (min-width: 576px) {
+  .design-sec1-container-display h2 {
+    font-size: 3rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .design-sec1-container-display h2 {
+    font-size: 3.125rem;
+  }
+}
+
+@media (min-width: 992px) {
+  .design-sec1-container-display h2 {
+    font-size: 3.125rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .design-sec1-container-display h2 {
+    font-size: 3.125rem;
+  }
+}
+
+@media (min-width: 1600px) {
+  .design-sec1-container-display h2 {
+    font-size: 3.125rem;
+  }
+}
+
+.design-sec2 {
+  padding-top: 3.5rem;
+  padding-bottom: 3.5rem;
+}
+
+.design-sec2-container {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media (min-width: 576px) {
+  .design-sec2-container {
+    max-width: 516px;
+  }
+}
+
+@media (min-width: 768px) {
+  .design-sec2-container {
+    max-width: 708px;
+  }
+}
+
+@media (min-width: 992px) {
+  .design-sec2-container {
+    max-width: 932px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .design-sec2-container {
+    max-width: 1140px;
+  }
+}
+
+.design-sec2-container h2 {
+  text-align: center;
+  font-weight: bolder;
+  margin-bottom: 0;
+  color: #505050;
+}
+
+@media (min-width: 350px) {
+  .design-sec2-container h2 {
+    font-size: 1.25rem;
+  }
+}
+
+@media (min-width: 400px) {
+  .design-sec2-container h2 {
+    font-size: 1.375rem;
+  }
+}
+
+@media (min-width: 576px) {
+  .design-sec2-container h2 {
+    font-size: 1.5rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .design-sec2-container h2 {
+    font-size: 1.5rem;
+  }
+}
+
+@media (min-width: 992px) {
+  .design-sec2-container h2 {
+    font-size: 1.5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .design-sec2-container h2 {
+    font-size: 1.5rem;
+  }
+}
+
+@media (min-width: 1600px) {
+  .design-sec2-container h2 {
+    font-size: 1.5rem;
+  }
+}
+
+.design-sec2-container h3 {
+  font-size: 0.9375rem;
+  text-align: center;
+  color: #505050;
+  margin-bottom: 3rem;
+}
+
+.design-sec2_video-formGroup form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 200px;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.design-sec2_video-formGroup form input {
+  outline: 0;
+  margin: 0;
+  line-height: 1.65rem;
+  height: 1.65rem;
+  border: 0.125rem solid #a0a1a5;
+}
+
+.design-sec2_video-formGroup form button {
+  background-color: #a0a1a5;
+  background-image: url(../../images/icon/search.svg);
+  background-size: 60%;
+  background-position: center;
+  background-repeat: no-repeat;
+  border: 0;
+  width: 2rem;
+  height: 2rem;
+}
+
+.design-sec2_video-row {
+  margin-left: -15px;
+  margin-right: -15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-left: -1rem;
+  margin-right: -1rem;
+}
+
+.design-sec2_video-row-col {
+  padding-left: 15px;
+  padding-right: 15px;
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+  max-width: 50%;
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+@media (max-width: 992px) {
+  .design-sec2_video-row-col {
+    padding-left: 15px;
+    padding-right: 15px;
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    max-width: 100%;
+    -webkit-box-flex: 0;
+        -ms-flex-positive: 0;
+            flex-grow: 0;
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
+  }
+}
+
+.design-sec2_video-row-col-figure {
+  height: 33rem;
+  position: relative;
+  padding: 0.5rem;
+}
+
+.design-sec2_video-row-col-figure button::after, .design-sec2_video-row-col-figure a::after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  pointer-events: auto;
+  content: "";
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.design-sec2_video-row-col-figure.list {
+  width: 50%;
+  height: 50%;
+}
+
+.design-sec2_video-row-col-figure figure {
+  -webkit-box-shadow: 0 0.125rem 0.125rem 0.125rem rgba(0, 0, 0, 0.15);
+          box-shadow: 0 0.125rem 0.125rem 0.125rem rgba(0, 0, 0, 0.15);
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
+}
+
+.design-sec2_video-row-col-figure figure img {
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  width: 100%;
+  background-size: cover;
+  height: 25rem;
+  margin-bottom: 0.375rem;
+}
+
+.design-sec2_video-row-col-figure figure img.list {
+  height: 11.25rem;
+}
+
+.design-sec2_video-row-col-figure figure h4 {
+  margin-top: 0.75rem;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  font-size: 1.25rem;
+  color: #505050;
+  font-weight: bolder;
+  margin-top: 0.375rem;
+  margin-bottom: 0.375rem;
+}
+
+.design-sec2_video-row-col-figure figure h4 span, .design-sec2_video-row-col-figure figure h4 a {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.design-sec2_video-row-col-figure figure p {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  margin-top: 0.375rem;
+  margin-bottom: 0.75rem;
+}
+
+.design-sec2_video-row-col-figure figure p a {
+  color: #505050;
+  font-size: 0.8125rem;
+  line-height: 1.25rem;
+  max-height: 2.5rem;
+  overflow: hidden;
+}
+
+.design-sec2_video-row-col-figure figure:hover {
+  background-color: #c6d5e9;
 }
 
 .social-banner {
