--- a/src/scss/page/_applications.scss
+++ b/src/scss/page/_applications.scss
@@ -204,6 +204,7 @@
                 font-size: 1.5rem;
                 color: #505050;
                 margin-bottom: 0.5rem;
+                font-weight: border;
             }
             p{
                 font-size: 0.875rem;
@@ -291,6 +292,7 @@
                     color: #000;
                     margin-top: 4rem;
                     margin-bottom: 2rem;
+                    font-weight: border;
                 }
                 p{
                     font-size: 1rem;
