--- a/src/scss/page/_design.scss
+++ b/src/scss/page/_design.scss
@@ -1,4 +1,4 @@
-.knowledge{
+.design{
     &#{-sec1}{
         background-size: cover;
         background-position: center;
@@ -30,12 +30,12 @@
                 @include display-4;
                 font-weight: bolder;
                 margin-bottom: 0;
-                color: #000000;
+                color: #505050;
             }
             h3{
                 font-size: 0.9375rem;
                 text-align: center;
-                color: #000000;
+                color: #505050;
                 margin-bottom: 3rem;
             }
 
@@ -71,55 +71,67 @@
             }
             &#{-row}{
                 @include row;
-                @include mx(-0.25rem);
-
+                @include mx(-1rem);
                 &#{-col}{
                     @include col(50%);
                     @include media-max($lg) {
                         @include col(100%);
                     }
-                    @include px(0);
                     display: flex;
-
+                    flex-wrap: wrap;
+                    @include px(0.5rem);
+                    @include my(0.5rem);
                     &#{-figure}{
+                        height: 33rem;
                         @include stretched-link;
-                        flex-grow: 1;
-                        flex-shrink: 1;
-                        flex-basis: auto;
-                        width: 100%;
-                        @include px(0.25rem);
-                        height: 30rem;
-
+                        &.list{
+                            width: 50%;
+                            height: 50%;
+                        }
+                        padding: 0.5rem;
                         figure{
                             box-shadow: 0 0.125rem 0.125rem 0.125rem rgba(0,0,0,0.15);
-                            overflow: hidden;
                             transition: all 0.2s;
-
+                            text-align: center;
+                            display: flex;
+                            flex-direction: column;
+                            height: 100%;
                             img{
-                            width: 100%;
-                            height: 20rem;
-                            background-size: cover;
-                            margin-bottom: 0.25rem;
-                            }
-                            h4{
-                                @include text-ellipsis;
-                                @include my(0.5rem);
-                                @include px(1.5rem);
-                                a{
-                                    font-size: 1.25rem;
-                                    color: #000000;
-                                    font-weight: bolder;
+                                flex-shrink: 0;
+                                width: 100%;
+                                background-size: cover;
+                                height: 25rem;
+                                margin-bottom: 0.375rem;
+                                &.list{
+                                    height: 11.25rem;
                                 }
                             }
-                            p{
-                                line-height: 1.25rem;
-                                height: 1.25rem*4;
-                                overflow: hidden;
-                                color: #000000;
-                                font-size: 0.875rem;
+                            h4{
+                                margin-top: 0.75rem;
+                                flex-shrink: 0;
                                 @include px(1.5rem);
+                                @include text-ellipsis;
+                                font-size: 1.25rem;
+                                color: #505050;
+                                font-weight: bolder;
+                                @include my(0.375rem);
+                            }
+                            p{
+                                flex-grow: 1;
+                                display: flex;
+                                align-items: center;
+                                justify-content: center;
+                                @include px(1.5rem);
+                                margin-top: 0.375rem;
                                 margin-bottom: 0.75rem;
-                    
+
+                                a{
+                                    color: #505050;
+                                    font-size: 0.8125rem;
+                                    line-height: 1.25rem;
+                                    max-height: 1.25rem*2;
+                                    overflow: hidden;
+                                }
                             }
                             &:hover{
                                 background-color: #c6d5e9;
