--- a/src/main.scss
+++ b/src/main.scss
@@ -15,5 +15,6 @@
 @import 'scss/page/applications';
 @import 'scss/page/knowledge';
 @import 'scss/page/design';
+@import 'scss/page/innovation';
 @import 'scss/page/social';
 @import 'scss/browserReplacement';
