--- a/src/scss/page/_social.scss
+++ b/src/scss/page/_social.scss
@@ -157,6 +157,9 @@
                                     @include display-4;
                                 }
                             }
+                            &:hover{
+                                opacity: 0.9;
+                            }
                         }
                     }
                 }
