--- a/src/scss/page/_innovation.scss
+++ b/src/scss/page/_innovation.scss
@@ -1,4 +1,4 @@
-#banner-design{
+#banner-innovation{
     margin-bottom: 0;
     .silck-item{
         position: relative;
@@ -176,7 +176,7 @@
         }
     }
 }
-.design{
+.innovation{
     &#{-sec2}{
         @include py(3.5rem);
         &#{-container}{
@@ -229,8 +229,11 @@
                 @include row;
                 @include mx(-1rem);
                 &#{-col}{
-                    @include col(50%);
-                    @include media-max($lg) {
+                    @include col(33%);
+                    @include media-max($xl) {
+                        @include col(50%);
+                    }
+                    @include media-max($md) {
                         @include col(100%);
                     }
                     display: flex;
@@ -240,29 +243,24 @@
                     &#{-figure}{
                         height: 33rem;
                         @include stretched-link;
-                        &.list{
-                            width: 50%;
-                            height: 50%;
-                        }
                         padding: 0.5rem;
+                        
                         figure{
                             box-shadow: 0 0.125rem 0.125rem 0.125rem rgba(0,0,0,0.15);
                             transition: all 0.2s;
-                            text-align: center;
                             display: flex;
                             flex-direction: column;
                             height: 100%;
+                            width: 100%;
                             img{
                                 flex-shrink: 0;
                                 width: 100%;
                                 background-size: cover;
-                                height: 25rem;
+                                height: 21rem;
                                 margin-bottom: 0.375rem;
-                                &.list{
-                                    height: 11.25rem;
-                                }
                             }
                             h4{
+                                text-align: center;
                                 margin-top: 0.75rem;
                                 flex-shrink: 0;
                                 @include px(1.5rem);
@@ -273,9 +271,10 @@
                                 @include my(0.375rem);
                             }
                             p{
+                                text-align: left;
                                 flex-grow: 1;
                                 display: flex;
-                                align-items: center;
+                                align-items: flex-start;
                                 justify-content: center;
                                 @include px(1.5rem);
                                 margin-top: 0.375rem;
@@ -285,7 +284,7 @@
                                     color: #505050;
                                     font-size: 0.8125rem;
                                     line-height: 1.25rem;
-                                    max-height: 1.25rem*2;
+                                    max-height: 1.25rem*4;
                                     overflow: hidden;
                                 }
                             }
