--- a/src/css/main.css
+++ b/src/css/main.css
@@ -234,11 +234,6 @@ button:focus {
   outline: 0;
 }
 
-button:active {
-  -webkit-box-shadow: 0 0 0.5rem 0.375rem rgba(0, 0, 0, 0.25) inset;
-          box-shadow: 0 0 0.5rem 0.375rem rgba(0, 0, 0, 0.25) inset;
-}
-
 h1 {
   --font-size: 2.5rem;
   --line-height: 5rem;
@@ -1515,6 +1510,236 @@ body.compensate-for-scrollbar {
   opacity: 0.75;
 }
 
+@-webkit-keyframes about-sec2-heading-1-animate {
+  0% {
+    -webkit-transform: translateX(-200%);
+            transform: translateX(-200%);
+  }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+}
+
+@keyframes about-sec2-heading-1-animate {
+  0% {
+    -webkit-transform: translateX(-200%);
+            transform: translateX(-200%);
+  }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+}
+
+@-webkit-keyframes about-sec2-heading-2-animate {
+  0% {
+    -webkit-transform: translateX(-200%);
+            transform: translateX(-200%);
+  }
+  50% {
+    -webkit-transform: translateX(-200%);
+            transform: translateX(-200%);
+  }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+}
+
+@keyframes about-sec2-heading-2-animate {
+  0% {
+    -webkit-transform: translateX(-200%);
+            transform: translateX(-200%);
+  }
+  50% {
+    -webkit-transform: translateX(-200%);
+            transform: translateX(-200%);
+  }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+}
+
+@-webkit-keyframes about-sec3-graphics-center-1-animate {
+  form {
+    -webkit-transform: translate(-50%, 0) rotate(0deg);
+            transform: translate(-50%, 0) rotate(0deg);
+  }
+  to {
+    -webkit-transform: translate(-50%, 0) rotate(360deg);
+            transform: translate(-50%, 0) rotate(360deg);
+  }
+}
+
+@keyframes about-sec3-graphics-center-1-animate {
+  form {
+    -webkit-transform: translate(-50%, 0) rotate(0deg);
+            transform: translate(-50%, 0) rotate(0deg);
+  }
+  to {
+    -webkit-transform: translate(-50%, 0) rotate(360deg);
+            transform: translate(-50%, 0) rotate(360deg);
+  }
+}
+
+@-webkit-keyframes about-sec3-graphics-center-2-animate {
+  form {
+    -webkit-transform: translate(-50%, 0) rotate(0deg);
+            transform: translate(-50%, 0) rotate(0deg);
+  }
+  to {
+    -webkit-transform: translate(-50%, 0) rotate(360deg);
+            transform: translate(-50%, 0) rotate(360deg);
+  }
+}
+
+@keyframes about-sec3-graphics-center-2-animate {
+  form {
+    -webkit-transform: translate(-50%, 0) rotate(0deg);
+            transform: translate(-50%, 0) rotate(0deg);
+  }
+  to {
+    -webkit-transform: translate(-50%, 0) rotate(360deg);
+            transform: translate(-50%, 0) rotate(360deg);
+  }
+}
+
+@-webkit-keyframes about-sec3-graphics-center-3-animate {
+  form {
+    -webkit-transform: translate(-50%, 0) rotate(240deg);
+            transform: translate(-50%, 0) rotate(240deg);
+  }
+  to {
+    -webkit-transform: translate(-50%, 0) rotate(600deg);
+            transform: translate(-50%, 0) rotate(600deg);
+  }
+}
+
+@keyframes about-sec3-graphics-center-3-animate {
+  form {
+    -webkit-transform: translate(-50%, 0) rotate(240deg);
+            transform: translate(-50%, 0) rotate(240deg);
+  }
+  to {
+    -webkit-transform: translate(-50%, 0) rotate(600deg);
+            transform: translate(-50%, 0) rotate(600deg);
+  }
+}
+
+@-webkit-keyframes about-sec3-graphics-center-4-animate {
+  form {
+    -webkit-transform: translate(-50%, 0) rotate(120deg);
+            transform: translate(-50%, 0) rotate(120deg);
+  }
+  to {
+    -webkit-transform: translate(-50%, 0) rotate(480deg);
+            transform: translate(-50%, 0) rotate(480deg);
+  }
+}
+
+@keyframes about-sec3-graphics-center-4-animate {
+  form {
+    -webkit-transform: translate(-50%, 0) rotate(120deg);
+            transform: translate(-50%, 0) rotate(120deg);
+  }
+  to {
+    -webkit-transform: translate(-50%, 0) rotate(480deg);
+            transform: translate(-50%, 0) rotate(480deg);
+  }
+}
+
+@-webkit-keyframes about-sec3-graphics-heading-4-animate {
+  0% {
+    -webkit-transform: translate(445%, 140%);
+            transform: translate(445%, 140%);
+  }
+  50% {
+    -webkit-transform: translate(445%, 140%);
+            transform: translate(445%, 140%);
+  }
+  100% {
+    -webkit-transform: translate(145%, 140%);
+            transform: translate(145%, 140%);
+  }
+}
+
+@keyframes about-sec3-graphics-heading-4-animate {
+  0% {
+    -webkit-transform: translate(445%, 140%);
+            transform: translate(445%, 140%);
+  }
+  50% {
+    -webkit-transform: translate(445%, 140%);
+            transform: translate(445%, 140%);
+  }
+  100% {
+    -webkit-transform: translate(145%, 140%);
+            transform: translate(145%, 140%);
+  }
+}
+
+@-webkit-keyframes about-sec3-graphics-heading-3-animate {
+  0% {
+    -webkit-transform: translate(-440%, 50%);
+            transform: translate(-440%, 50%);
+  }
+  50% {
+    -webkit-transform: translate(-440%, 50%);
+            transform: translate(-440%, 50%);
+  }
+  100% {
+    -webkit-transform: translate(-140%, 50%);
+            transform: translate(-140%, 50%);
+  }
+}
+
+@keyframes about-sec3-graphics-heading-3-animate {
+  0% {
+    -webkit-transform: translate(-440%, 50%);
+            transform: translate(-440%, 50%);
+  }
+  50% {
+    -webkit-transform: translate(-440%, 50%);
+            transform: translate(-440%, 50%);
+  }
+  100% {
+    -webkit-transform: translate(-140%, 50%);
+            transform: translate(-140%, 50%);
+  }
+}
+
+@-webkit-keyframes about-sec3-graphics-heading-2-animate {
+  0% {
+    -webkit-transform: translate(400%, -65%);
+            transform: translate(400%, -65%);
+  }
+  50% {
+    -webkit-transform: translate(400%, -65%);
+            transform: translate(400%, -65%);
+  }
+  100% {
+    -webkit-transform: translate(100%, -65%);
+            transform: translate(100%, -65%);
+  }
+}
+
+@keyframes about-sec3-graphics-heading-2-animate {
+  0% {
+    -webkit-transform: translate(400%, -65%);
+            transform: translate(400%, -65%);
+  }
+  50% {
+    -webkit-transform: translate(400%, -65%);
+            transform: translate(400%, -65%);
+  }
+  100% {
+    -webkit-transform: translate(100%, -65%);
+            transform: translate(100%, -65%);
+  }
+}
+
 /*
 header
 .header-container
@@ -1581,6 +1806,8 @@ main {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-left: -15px;
+  margin-right: -15px;
 }
 
 @media (max-width: 1200px) {
@@ -1811,20 +2038,29 @@ main {
   }
 }
 
+.header_navbar-ul-dropdown:not(.active) .header_dropdown-ul {
+  display: block;
+  max-height: 0;
+  -webkit-transition: all 0.6s;
+  transition: all 0.6s;
+  overflow: hidden;
+}
+
 @media (min-width: 1200px) {
   .header_navbar-ul-dropdown:not(.active) .header_dropdown-ul {
     padding-top: 0;
     padding-bottom: 0;
-    display: block !important;
-    max-height: 0;
-    -webkit-transition: all 0.6s;
-    transition: all 0.6s;
-    overflow: hidden;
   }
+}
+
+.header_navbar-ul-dropdown:not(.active):hover .header_dropdown-ul {
+  max-height: 25rem;
+}
+
+@media (min-width: 1200px) {
   .header_navbar-ul-dropdown:not(.active):hover .header_dropdown-ul {
     padding-top: 1rem;
     padding-bottom: 1rem;
-    max-height: 25rem;
   }
 }
 
@@ -2166,8 +2402,8 @@ footer {
   background-position: 47% center;
   background-size: cover;
   z-index: 4;
-  -webkit-animation: star-sky-1 2.5s linear infinite;
-          animation: star-sky-1 2.5s linear infinite;
+  -webkit-animation: star-sky-1 7.5s linear infinite;
+          animation: star-sky-1 7.5s linear infinite;
 }
 
 .home-sec1-bgLower {
@@ -2179,8 +2415,8 @@ footer {
   background-position: 47% center;
   background-size: cover;
   z-index: 5;
-  -webkit-animation: star-sky-2 2.5s linear infinite;
-          animation: star-sky-2 2.5s linear infinite;
+  -webkit-animation: star-sky-2 7.5s linear infinite;
+          animation: star-sky-2 7.5s linear infinite;
 }
 
 .home-sec1-container {
@@ -2772,6 +3008,44 @@ footer {
   background-position: center;
   height: 100vh;
   background-color: #101010;
+  position: relative;
+}
+
+.home-sec4-bgUpper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-size: cover;
+  z-index: 4;
+  background-position: 55% center;
+  pointer-events: none;
+}
+
+.home-sec4-bgLower {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-size: cover;
+  z-index: 5;
+  background-position: 55% center;
+  pointer-events: none;
+  -webkit-transform-origin: 50% 68%;
+          transform-origin: 50% 68%;
+  -webkit-transform: scale(0.01);
+          transform: scale(0.01);
+  -webkit-transition: -webkit-transform 3s ease;
+  transition: -webkit-transform 3s ease;
+  transition: transform 3s ease;
+  transition: transform 3s ease, -webkit-transform 3s ease;
+}
+
+.home-sec4-bgLower.animate {
+  -webkit-transform: scale(1);
+          transform: scale(1);
 }
 
 .home-sec4-container {
@@ -3181,8 +3455,8 @@ footer {
           flex-grow: 0;
   -ms-flex-negative: 0;
       flex-shrink: 0;
-  padding-top: 0.375rem;
-  padding-bottom: 0.375rem;
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
 }
 
 @media (min-width: 992px) {
@@ -3434,7 +3708,7 @@ footer {
           box-shadow: none;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 992px) {
   #silck-applications .slick-arrow {
     display: none !important;
   }
@@ -4874,6 +5148,16 @@ footer {
   }
 }
 
+.about-sec2-container-display-row-text-heading.animate:nth-of-type(1) {
+  -webkit-animation: about-sec2-heading-1-animate 1s ease;
+          animation: about-sec2-heading-1-animate 1s ease;
+}
+
+.about-sec2-container-display-row-text-heading.animate:nth-of-type(2) {
+  -webkit-animation: about-sec2-heading-2-animate 2s ease;
+          animation: about-sec2-heading-2-animate 2s ease;
+}
+
 .about-sec2-container-display-row-text-heading h3 {
   color: #fefefe;
   margin-top: 3rem;
@@ -5081,6 +5365,21 @@ footer {
           transform: translate(100%, -65%);
 }
 
+.about-sec3-graphics-center-heading.animate:nth-of-type(2) {
+  -webkit-animation: about-sec3-graphics-heading-2-animate 1.5s ease;
+          animation: about-sec3-graphics-heading-2-animate 1.5s ease;
+}
+
+.about-sec3-graphics-center-heading.animate:nth-of-type(3) {
+  -webkit-animation: about-sec3-graphics-heading-3-animate 1.5s ease;
+          animation: about-sec3-graphics-heading-3-animate 1.5s ease;
+}
+
+.about-sec3-graphics-center-heading.animate:nth-of-type(4) {
+  -webkit-animation: about-sec3-graphics-heading-4-animate 1.5s ease;
+          animation: about-sec3-graphics-heading-4-animate 1.5s ease;
+}
+
 .about-sec3-graphics-center-circleCenter {
   position: absolute;
   top: 50%;
@@ -5228,6 +5527,26 @@ footer {
 .about-sec3-graphics-center:nth-of-type(4) span {
   -webkit-transform: rotate(-120deg);
           transform: rotate(-120deg);
+}
+
+.about-sec3-graphics-center.animate:nth-of-type(1) {
+  -webkit-animation: about-sec3-graphics-center-1-animate 1s linear;
+          animation: about-sec3-graphics-center-1-animate 1s linear;
+}
+
+.about-sec3-graphics-center.animate:nth-of-type(2) {
+  -webkit-animation: about-sec3-graphics-center-2-animate 1s linear;
+          animation: about-sec3-graphics-center-2-animate 1s linear;
+}
+
+.about-sec3-graphics-center.animate:nth-of-type(3) {
+  -webkit-animation: about-sec3-graphics-center-3-animate 1s linear;
+          animation: about-sec3-graphics-center-3-animate 1s linear;
+}
+
+.about-sec3-graphics-center.animate:nth-of-type(4) {
+  -webkit-animation: about-sec3-graphics-center-4-animate 1s linear;
+          animation: about-sec3-graphics-center-4-animate 1s linear;
 }
 
 .about-sec4-container {
@@ -5692,9 +6011,21 @@ footer {
   height: 18.5rem;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1200px) {
   .about-sec6-container-row-col figure .img {
     height: 12rem;
+  }
+}
+
+@media (max-width: 992px) {
+  .about-sec6-container-row-col figure .img {
+    height: 10rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .about-sec6-container-row-col figure .img {
+    height: 8rem;
   }
 }
 
@@ -6042,6 +6373,12 @@ footer {
 
 #silck-about .slick-dots {
   bottom: -2.5rem;
+}
+
+@media (min-width: 576px) {
+  #silck-about .slick-dots {
+    display: none !important;
+  }
 }
 
 #silck-about .slick-dots li {
