--- a/src/main.scss
+++ b/src/main.scss
@@ -6,6 +6,7 @@
 @import 'scss/fancyapps/index';
 @import 'scss/slick-carousel/slick';
 @import 'scss/slick-carousel/slick-theme';
+@import 'scss/animate/about';
 @import 'scss/page/header';
 @import 'scss/page/footer';
 @import 'scss/page/home';
