--- a/src/scss/page/_about.scss
+++ b/src/scss/page/_about.scss
@@ -72,6 +72,14 @@
                         flex-direction: column;
                         justify-content: center;
                         &#{-heading}{
+                            &.animate{
+                                &:nth-of-type(1){
+                                    animation: about-sec2-heading-1-animate 1s ease;
+                                }
+                                &:nth-of-type(2){
+                                    animation: about-sec2-heading-2-animate 2s ease;
+                                }
+                            }
                             h3{
                                 @include display-3;
                                 color: #fefefe;
@@ -137,6 +145,9 @@
                 height: 37.5rem * 0.8;
             }
             position: relative;
+
+            
+
             &#{-center}{
                 text-align: center;
                 position: absolute;
@@ -155,6 +166,7 @@
                 }
                 border-radius: 50%;
                 border: 0.375rem solid transparent;
+
                 &#{-heading}{
                     position: absolute;
                     top: 0;
@@ -181,6 +193,18 @@
                     &:nth-of-type(2){
                         text-align: left;
                         transform: translate(100%,-65%);
+                        
+                    }
+                    &.animate{
+                        &:nth-of-type(2){
+                            animation: about-sec3-graphics-heading-2-animate 1.5s ease;
+                        }
+                        &:nth-of-type(3){
+                            animation: about-sec3-graphics-heading-3-animate 1.5s ease;
+                        }
+                        &:nth-of-type(4){
+                            animation: about-sec3-graphics-heading-4-animate 1.5s ease;
+                        }
                     }
                     
                 }
@@ -257,6 +281,7 @@
                     z-index: 1;
                     border: 0.375rem solid #6da8f2;
                 }
+                
                 &:nth-of-type(2){
                     transform: translate(-50%, 0) rotate(0deg);
                     z-index: 2;
@@ -276,6 +301,20 @@
                     z-index: 1;
                     span{
                         transform: rotate(-120deg);
+                    }
+                }
+                &.animate{
+                    &:nth-of-type(1){
+                        animation: about-sec3-graphics-center-1-animate 1s linear;
+                    }
+                    &:nth-of-type(2){
+                        animation: about-sec3-graphics-center-2-animate 1s linear;
+                    }
+                    &:nth-of-type(3){
+                        animation: about-sec3-graphics-center-3-animate 1s linear;
+                    }
+                    &:nth-of-type(4){
+                        animation: about-sec3-graphics-center-4-animate 1s linear;
                     }
                 }
                 
@@ -438,8 +477,14 @@
                             background-size: cover;
                             background-position: center;
                             height: 18.5rem;
-                            @include media-max($md) {
+                            @include media-max($xl) {
                                 height: 12rem;
+                            }
+                            @include media-max($lg) {
+                                height: 10rem;
+                            }
+                            @include media-max($md) {
+                                height: 8rem;
                             }
                             @include media-max($sm) {
                                 height: 8rem;
@@ -704,6 +749,9 @@
     }
 
     .slick-dots{
+        @include media-min($sm) {
+            display: none !important;
+        }
         bottom: -2.5rem;;
         li{
             width: 1rem;
