--- a/src/scss/page/_header.scss
+++ b/src/scss/page/_header.scss
@@ -30,6 +30,7 @@ main{
         &#{-navbar} {
             display: flex;
             align-items: center;
+            @include mx(-$grid-gutters/2);
             @include media-max($xl) {
                 flex-direction: column;
                 align-items: start;
@@ -198,22 +199,24 @@ main{
                     padding-left: 0.75rem;
                 }
 
-                @include media-min($xl) {
-                    &:not(.active){
-                        .header_dropdown-ul{
+                &:not(.active){
+                    .header_dropdown-ul{
+                        @include media-min($xl) {
                             padding-top: 0;
                             padding-bottom: 0;
-                            display: block!important;
-                            max-height: 0;
-                            transition: all 0.6s;
-                            overflow: hidden;
                         }
-                        &:hover{
-                            .header_dropdown-ul{
+                        display: block;
+                        max-height: 0;
+                        transition: all 0.6s;
+                        overflow: hidden;
+                    }
+                    &:hover{
+                        .header_dropdown-ul{
+                            @include media-min($xl) {
                                 padding-top: 1rem;
                                 padding-bottom: 1rem;
-                                max-height: 25rem;
                             }
+                            max-height: 25rem;
                         }
                     }
                 }
