--- a/src/scss/page/_header.scss
+++ b/src/scss/page/_header.scss
@@ -193,11 +193,16 @@ main{
                 position: relative;
                 margin-left: 0.75rem;
                 margin-right: 1.25rem;
-                
+
                 @include media-max($xl) {
                     width: 100%;
                     padding-left: 0.75rem;
                 }
+                .header_dropdown-ul{
+                    max-height: 25rem;
+                    transition: all 0.4s;
+                    overflow: hidden;
+                 }
 
                 &:not(.active){
                     .header_dropdown-ul{
@@ -210,15 +215,15 @@ main{
                         transition: all 0.6s;
                         overflow: hidden;
                     }
-                    &:hover{
-                        .header_dropdown-ul{
-                            @include media-min($xl) {
-                                padding-top: 1rem;
-                                padding-bottom: 1rem;
-                            }
-                            max-height: 25rem;
-                        }
-                    }
+                    // &:hover{
+                    //     .header_dropdown-ul{
+                    //         @include media-min($xl) {
+                    //             padding-top: 1rem;
+                    //             padding-bottom: 1rem;
+                    //         }
+                    //         max-height: 25rem;
+                    //     }
+                    // }
                 }
                 
 
@@ -228,7 +233,7 @@ main{
                     top: 50%;
                     right: -1.25rem;
                     display: inline-block;
-                    pointer-events: none;
+                    pointer-events: auto;
                     transform: translateY(-25%) rotate(0deg);
                     transition: all 0.3s;
                     border: {
