--- a/src/scss/page/_knowledge.scss
+++ b/src/scss/page/_knowledge.scss
@@ -127,7 +127,7 @@
                         
 
                         figure{
-                            box-shadow: 0 0.125rem 0.125rem 0.125rem rgba(0,0,0,0.15);
+                            box-shadow : 1px 1px 2px 1px rgba(100,100,100,.2);
                             overflow: hidden;
                             transition: all 0.2s;
                             margin-bottom: 0.75rem;
