--- a/src/scss/page/_social.scss
+++ b/src/scss/page/_social.scss
@@ -143,22 +143,31 @@
                         @include py(1rem);
                         
                         figure{
+                            position: relative;
                             width: 100%;
-                            background-size: cover;
-                            background-position: center;
                             display: flex;
                             align-items: center;
-                            height: 12.5rem;
                             @include stretched-link;
 
                             h4{
                                 @include px(2.25rem);
+                                position: absolute;
+                                top: 0;
+                                left: 0;
+                                right: 0;
+                                bottom: 0;
+                                z-index: 1;
+                                display: flex;
+                                align-items: center;
                                 a{
                                     @include display-4;
                                 }
                             }
                             &:hover{
                                 opacity: 0.9;
+                            }
+                            img{
+                                width: 100%;
                             }
                         }
                     }
