--- a/src/scss/page/_design.scss
+++ b/src/scss/page/_design.scss
@@ -248,7 +248,7 @@
                         padding: 0.5rem;
                         width: 100%;
                         figure{
-                            box-shadow: 0 0.125rem 0.125rem 0.125rem rgba(0,0,0,0.15);
+                            box-shadow : 1px 1px 2px 1px rgba(100,100,100,.2);
                             transition: all 0.2s;
                             text-align: center;
                             display: flex;
