--- a/src/scss/page/_header.scss
+++ b/src/scss/page/_header.scss
@@ -126,6 +126,7 @@ main{
                 @include mx(auto)
             }
             @include media-max($xl){
+                display: none;
                 flex-direction: column;
                 align-items: start;
                 width: 100%;
@@ -134,13 +135,9 @@ main{
                 top: 3rem;
                 left: 0;
                 right: 0;
-                opacity: 0;
-                pointer-events: none;
             }
             &.active{
-                height: auto;
-                opacity: 1;
-                pointer-events: auto;
+                display: flex;
             }
             
             &#{-li} {
